One final time for the afternoon: Testing the cross-repository commits (making sure that Heroku, my local machines, and GitHub play nice with each other.)

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,8 +1,9 @@
 <h1>Activities</h1>
 <h2>This is just an idea list for now</h2>
 <ul>
-	<li>Task List</li>
-	<li>Invite new users</li>
-	<li>Process Cutof</li>
-	<li>Access Archives</li>
+  <li>Task List</li>
+  <li>Invite new users</li>
+  <li>Process Cutof</li>
+  <li>Access Archives</li>
+  <li>Improve opensource workflow</li>
 </ul>
