Ensuring the Heroku changes didn't break my existing repository setup (never can be too sure).

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,4 +6,5 @@
   <li>Process Cutof</li>
   <li>Access Archives</li>
   <li>Improve opensource workflow</li>
+  <li>Move over to production environment</li>
 </ul>
