--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,3 +22,7 @@
 
 	<%= f.submit "Update", :disable_with => 'Updating...' %>
 <% end -%>
+
+<p>
+	<%= link_to "Back", :action => "show", :id => @user %>
+</p>
