--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,7 @@
 
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
+<%= f.hidden_field :invitation_token %>
 <p><%= label_tag 'login' %><br/>
 <%= f.text_field :login %></p>
 
