--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -42,6 +42,9 @@
 <br/>
   Food Only: 
   <%=h @family.human_foodonly %>
+<br/>
+  Pickup/Delivery: 
+  <%=h @family.human_pickup %>
 </p>
 
 <!-- The Childrens -->
