--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,5 +1,8 @@
 <% content_for :sidebar do %>
 	<p>
+		Currently <%= @families.size %> families in Tribuo.
+	</p>
+	<p>
 		On the Families page, you can see all
 		the families you've entered into Tribuo, along
 		with some basic information about each one.
@@ -13,16 +16,13 @@
 	</p>
 <% end %>
 
-<h1>Our Families</h1>
-<h2>currently <%= @families.size %> families in Tribuo. </h2>
+<h1>Families</h1>
 
 <table>
   <tr>
     <th>Last Name</th>
     <th>First Name</th>
     <th>Phone</th>
-    <th>Address</th>
-    <th>Directions</th>
     <th>Size</th>
     <th>Children</th>
     <th>Food Only?</th>
@@ -41,8 +41,6 @@
     <td><%=h family.lastname %></td>
     <td><%=h family.firstname %></td>
     <td><%=h family.phone %></td>
-    <td><%=h family.address %></td>
-    <td><%=h family.directions %></td>
     <td><%=h family.familysize %></td>
     <td><%=h family.childrensize %></td>
     <td><%=h family.human_foodonly %></td>
