still working on css

--- a/public/stylesheets/tribuo.css
+++ b/public/stylesheets/tribuo.css
@@ -123,6 +123,11 @@ a img {
 	background-color:  white;
 	margin-left: 10px;
 }
+
+#main #page-wrapper #footer {
+	height: 100px;
+	display: block;
+}
 /*
 Styling for Families
 */
