Fixing a bit of wording...

--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -78,7 +78,9 @@ Directions: <br/>
 <% end %>
 	</table>
 </div>
-
+<p>
+	Add another child...
+</p>
 <!-- #New Child Form -->
 <%= render :partial => @child = Child.new, 
    :locals => { :button_name => 'Create'}%>
