--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,7 +5,13 @@
 <p>Welcome to Tribuo.</p>
 
 <p>
-News (Last updated: 11-9-08 at 6:05PM)<br/>
+News (Last updated: 11-10-08 at 11:32AM)
+
+</p>
+<p>
+	I've fixed a bit of wording on the Show family form temporarily, so the Create button and form makes a bit more sense. Sorry about that.
+	</p>
+<p>
 	When you see the upper right box (the one with your name in it) turn from green to salmon-orangish whatever, the system is going to be updated soon.  If you are in the middle of work and notice the color change, please find a 
 stopping point and wait until the update is complete and the color turns green again. There will be a 7-10 minute window from when the color first changes from green to when the update begins to ensure you have time to finish your work.  These changes generally will not disrupt service to the site, but for the first few days I want to make sure that nothing goes wrong. Thanks - Lee.
 </p>
