More fixes. Sometimes, Heroku git doesn't like me.

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -9,7 +9,7 @@ News (Last updated: 11-10-08 at 11:32AM)
 
 </p>
 <p>
-	I've fixed a bit of wording on the Show family form temporarily, so the Create button and form makes a bit more sense. Sorry about that.
+	I've fixed a bit of wording on the Show family form temporarily, so the Create button and form makes a bit more sense. Sorry about that. That page will change drastically in the future, though. For the better.
 	</p>
 <p>
 	When you see the upper right box (the one with your name in it) turn from green to salmon-orangish whatever, the system is going to be updated soon.  If you are in the middle of work and notice the color change, please find a 
