Big update. Ordering, Food calcs, etc.

--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -73,6 +73,9 @@ Directions: <br/>
 			<td>	
 				<%=h child.human_type %>
 			</td>
+			<td>
+				<%= link_to 'Remove', [@family, child], :confirm => 'Are you sure?', :method => :delete %>
+			</td>
 		</tr>
   <% end %>
 <% end %>
