--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,10 +1,7 @@
 <h1>Activities</h1>
-<h2>This is just an idea list for now</h2>
+<h2>Pretty Design for this Incoming...</h2>
 <ul>
-  <li>Task List</li>
-  <li>Invite new users</li>
-  <li>Process Cutof</li>
-  <li>Access Archives</li>
-  <li>Improve opensource workflow</li>
-  <li>Move over to production environment</li>
+  <li><%= link_to "Add/Modify Food Items", :controller => "foods" %></li>
+  <li><%= link_to "View Food Shopping List", :controller => "shoppinglist", :action => "food" %></li>
+  <li>View Toy Shopping List</li>
 </ul>
