Heh, user can't see git messages, so I better update the changelog.

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,12 +5,15 @@
 <p>Welcome to Tribuo.</p>
 
 <p>
-News (Last updated: 11-10-08 at 11:32AM)
+News (Last updated: 11-11-08 at 6:26PM)
 
 </p>
 <p>
+	The Families list is now ordered by Last name, and a rough system for Search is being implemented on the back end and will be revealed for you later.  You'll also notice the list "paginates", or limits the number of families per page to 25 to allow for easier viewing. There are now a few links in the Activities page to play with. You can add food items to track and view a Shopping List afterwards.
+</p>
+<p>
 	I've fixed a bit of wording on the Show family form temporarily, so the Create button and form makes a bit more sense. Sorry about that. That page will change drastically in the future, though. For the better.
-	</p>
+</p>
 <p>
 	When you see the upper right box (the one with your name in it) turn from green to salmon-orangish whatever, the system is going to be updated soon.  If you are in the middle of work and notice the color change, please find a 
 stopping point and wait until the update is complete and the color turns green again. There will be a 7-10 minute window from when the color first changes from green to when the update begins to ensure you have time to finish your work.  These changes generally will not disrupt service to the site, but for the first few days I want to make sure that nothing goes wrong. Thanks - Lee.
