Fixing a numerical error

--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :sidebar do %>
 	<p>
-		Currently <%= @families.size %> families in Tribuo.
+		Currently <%= Family.count %> families in Tribuo.
 	</p>
 	<p>
 		On the Families page, you can see all
