--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,9 +5,12 @@
 <p>Welcome to Tribuo.</p>
 
 <p>
-News (Last updated: 11-11-08 at 6:26PM)
+News (Last updated: 11-11-08 at 7:45PM)
 
 </p>
+<p>
+	Rough Search has been added. It might be useful while you enter stuff, so I went ahead and turned it on.  You can only search by lastname for now. I'll expand on that later.
+</p>	
 <p>
 	The Families list is now ordered by Last name, and a rough system for Search is being implemented on the back end and will be revealed for you later.  You'll also notice the list "paginates", or limits the number of families per page to 25 to allow for easier viewing. There are now a few links in the Activities page to play with. You can add food items to track and view a Shopping List afterwards.
 </p>
