--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -1,8 +1,8 @@
 <% content_for :sidebar do %>
 
-	<p>
-		<%= link_to "Create New Family", new_family_path %>
-	<p>
+<p>
+	<%= link_to image_tag('new_family_icon.png'), new_family_path %>
+</p>
 		At a glance:
 	</p>
 	<p>
