--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,12 +1,18 @@
 <% content_for :sidebar do %>
+<p>
+	<%= link_to image_tag('new_family_icon.png'), new_family_path %>
+</p>
 	<p>This is Tribuo. On this main page, you can get updates on the status of your project and see any issues that need to be taken care of.</p>
 <% end %>
 
 <p>Welcome to Tribuo.</p>
 
 <p>
-News (Last updated: 11-11-08 at 7:45PM)
+News (Last updated: 11-12-08 at 12:21AM)
 
+</p>
+<p>
+	Started cleaning up the views. Family list was first. As well as the header.  You can now click any of the column labels to resort the list by that parameter. Search is there still, only by last name still. It is case sensitive right now, so Alder will give results, but alder won't. Expect individual family pages to get a makeover next.
 </p>
 <p>
 	Rough Search has been added. It might be useful while you enter stuff, so I went ahead and turned it on.  You can only search by lastname for now. I'll expand on that later.
@@ -16,9 +22,5 @@ News (Last updated: 11-11-08 at 7:45PM)
 </p>
 <p>
 	I've fixed a bit of wording on the Show family form temporarily, so the Create button and form makes a bit more sense. Sorry about that. That page will change drastically in the future, though. For the better.
-</p>
-<p>
-	When you see the upper right box (the one with your name in it) turn from green to salmon-orangish whatever, the system is going to be updated soon.  If you are in the middle of work and notice the color change, please find a 
-stopping point and wait until the update is complete and the color turns green again. There will be a 7-10 minute window from when the color first changes from green to when the update begins to ensure you have time to finish your work.  These changes generally will not disrupt service to the site, but for the first few days I want to make sure that nothing goes wrong. Thanks - Lee.
 </p>
 <p>Stats at glance:</p>
