Added flagging functionality

--- a/app/views/families/new.html.erb
+++ b/app/views/families/new.html.erb
@@ -119,6 +119,18 @@
 			</p>
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<p>
+				<%= f.label :flag, "Flag Now?" %>:
+			</p>	
+		</td>
+		<td> 
+			<p>
+				<%= select (:family, :flag, {"False" => false, "True" => true}) %>
+			</p>
+		</td>
+	</tr>
 </table>
 
 	<div id="children">
