--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,8 +8,11 @@
 <p>Welcome to Tribuo.</p>
 
 <p>
-News (Last updated: 11-12-08 at 12:21AM)
+News (Last updated: 11-15-08 at 11:57AM)
 
+</p>
+<p>
+	Added a flagging system.  You can now click the Star icon beside a family to flag them instead of using the children size hack.  Flagging works best from the List view, but you can also flag during family creation and on the family show page.	
 </p>
 <p>
 	Started cleaning up the views. Family list was first. As well as the header.  You can now click any of the column labels to resort the list by that parameter. Search is there still, only by last name still. It is case sensitive right now, so Alder will give results, but alder won't. Expect individual family pages to get a makeover next.
@@ -19,8 +22,5 @@ News (Last updated: 11-12-08 at 12:21AM)
 </p>	
 <p>
 	The Families list is now ordered by Last name, and a rough system for Search is being implemented on the back end and will be revealed for you later.  You'll also notice the list "paginates", or limits the number of families per page to 25 to allow for easier viewing. There are now a few links in the Activities page to play with. You can add food items to track and view a Shopping List afterwards.
-</p>
-<p>
-	I've fixed a bit of wording on the Show family form temporarily, so the Create button and form makes a bit more sense. Sorry about that. That page will change drastically in the future, though. For the better.
 </p>
 <p>Stats at glance:</p>
