--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -29,6 +29,7 @@
 </p>
 <table class="family-list">
   <tr class="family-list-header">
+	<th>		</th>
     <th><%= link_to "Last Name", :controller => "families", :order => "lastname", :search => params[:search], :page => params[:page] %></th>
     <th><%= link_to "First Name", :controller => "families", :order => "firstname", :search => params[:search], :page => params[:page] %></th>
     <th><%= link_to "Phone", :controller => "families", :order => "phone", :search => params[:search] %></th>
@@ -45,8 +46,16 @@
 		familyliststyle="family-row"
 	end
 	
+	if family.flag == true
+		familyliststyle="family-row-flagged"
+		flagimage = "StarIconGold.png"
+	else
+		flagimage = "StarIconSilver.png"
+	end
+	
 %>
-  <tr class="<%= familyliststyle %>">
+  <tr id= "family_<%= family.id %>" class="<%= familyliststyle %>">
+	<td class="family-row-flag"><%= link_to_remote image_tag(flagimage,:id => "flag_image_#{family.id}", :class => 'family_flag_image'), :url => family_url(:id => family.id, :flag => true), :method => :put %></td>
     <td class="family-row-lastname"><%=h family.lastname %></td>
     <td class="family-row-firstname"><%=h family.firstname %></td>
     <td class="family-row-phone"><%=h family.phone %></td>
