--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -31,6 +31,10 @@
 <%= editable_content_tag(:span, @family, 'firstname', true, nil,{:class => "show_family_name"},{:okText => 'Save'}) %>
 <%= editable_content_tag(:span, @family, 'lastname', true, nil,{:class => "show_family_name"},{:okText => 'Save'}) %>
 </p>
+<span id="family_<%= @family.id %>">Flagged? </span>
+<%= link_to_remote image_tag(@flagimage, :class => 'family_flag_image', :id=>"flag_image_#{@family.id}"), :url => family_url(:id => @family.id, :flag => true), :method => :put %>
+
+<br/>
 <p>Phone:<br/> 
 <%= editable_content_tag(:span, @family, 'phone', true, nil,{:class => "show_family_info"},{:okText => 'Save'}) %>
 <br/>
