--- a/app/views/shoppinglist/food.html.erb
+++ b/app/views/shoppinglist/food.html.erb
@@ -30,5 +30,14 @@ for fd in @food
 <%	
 end
 %>
-
+	<tr>
+		<td>
+			Total
+		</td>
+		<td>
+		</td>
+		<td>
+			<%= @foodtotal %>
+		</td>
+	</tr>
 </table>
