Ooops, didn't test a search type... fixing...

--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -22,7 +22,7 @@
 <p>Search (via Last Name for now):
 	<% form_tag families_path, :method => 'get' do %>
 	  <%= text_field_tag :search, params[:search] %>
-	  <%= select_tag :searchfield, options_for_select({'Last Name' => 'lastname', 'First Name' => 'firstname', 'Phone' => 'phone', 'Address' => 'address', 'Size' => 'size', 'Children' => 'childrensize', 'Box' => 'box'}, params[:searchfield]) %>
+	  <%= select_tag :searchfield, options_for_select({'Last Name' => 'lastname', 'First Name' => 'firstname', 'Phone' => 'phone', 'Address' => 'address', 'Size' => 'familysize', 'Children' => 'childrensize', 'Box' => 'box'}, params[:searchfield]) %>
 	  <%= submit_tag "Search", :name => nil %>
 	<% end %>	
 	<%= link_to "Reset", :controller => "families" %>
