Fixing some items

--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :sidebar do %>
 <p>
-	<%= link_to image_tag('new_family_icon.png'), new_family_path %>
+	<%= link_to image_tag('newfamilyicon.png'), new_family_path %>
 </p>
 	<p>
 		Currently <%= Family.count %> families in Tribuo.
