--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :sidebar do %>
 <p>
-	<%= link_to image_tag('new_family_icon.png'), new_family_path %>
+	<%= link_to image_tag('newfamilyicon.png'), new_family_path %>
 </p>
 	<p>This is Tribuo. On this main page, you can get updates on the status of your project and see any issues that need to be taken care of.</p>
 <% end %>
