--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :sidebar do %>
 
 <p>
-	<%= link_to image_tag('newfamilyicon.png'), new_family_path %>
+	<%= link_to image_tag('newfamilyicon.jpg'), new_family_path %>
 </p>
 		At a glance:
 	</p>
