--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,8 +8,15 @@
 <p>Welcome to Tribuo.</p>
 
 <p>
-News (Last updated: 11-15-08 at 11:57AM)
+News (Last updated: 11-17-08 at 6:40PM)
 
+</p>
+<p>
+	Fixed the image problem on Internet Explorer and Firefox on PCs. I'd still recommend using Firefox, but IE should be prettier now.  
+	
+	Search system is more robust. It is still case sensitive, but it does have partial text search and more fields to sort by.
+	
+	The Shopping List activity now properly predicts food cost with extra boxes figured in.  The default is 40 extra, but this can be changed in the Settings. (by creating a new setting called "extraboxes" and giving it the value you want).
 </p>
 <p>
 	Added a flagging system.  You can now click the Star icon beside a family to flag them instead of using the children size hack.  Flagging works best from the List view, but you can also flag during family creation and on the family show page.	
